--- a/package.json
+++ b/package.json
@@ -103,6 +103,8 @@
     "css-loader": "^5.2.7",
     "eslint": "^7.19.0",
     "eslint-config-ckeditor5": "^3.0.0",
+    "eslint-plugin-ckeditor5-rules": "^1.3.0",
+    "eslint-plugin-mocha": "^10.0.3",
     "glob": "^7.1.6",
     "http-server": "^0.12.3",
     "husky": "^4.2.5",
